examples/example_android_opengl3/android/app/build/intermediates/cxx/Debug/v1d2o6o2/logs/arm64-v8a/build_stdout_ImGuiExample.txt
ninja: Entering directory `/home/user/hax/examples/example_android_opengl3/android/app/.cxx/Debug/v1d2o6o2/arm64-v8a'
[1/11] Building CXX object CMakeFiles/ImGuiExample.dir/main.cpp.o
FAILED: CMakeFiles/ImGuiExample.dir/main.cpp.o 
/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --sysroot=/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DIMGUI_IMPL_OPENGL_ES3 -DImGuiExample_EXPORTS -I/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/../../../../../../.. -I/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/../../../../../../../backends -I/home/user/Sdk/ndk/27.2.12479018/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -std=c++11 -MD -MT CMakeFiles/ImGuiExample.dir/main.cpp.o -MF CMakeFiles/ImGuiExample.dir/main.cpp.o.d -o CMakeFiles/ImGuiExample.dir/main.cpp.o -c /home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/main.cpp
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/main.cpp:235:25: error: 'themeRegistry' is a private member of 'ImGui::Options'
  235 |             if (options.themeRegistry.empty()) {
      |                         ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.h:28:79: note: declared private here
   28 |         static std::unordered_map<std::string, std::function<void(Options&)>> themeRegistry;
      |                                                                               ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/main.cpp:236:78: error: call to non-static member function without an object argument
  236 |                 ImGui::Options::registerTheme("Adobe White", ImGui::Options::adobeWhite);
      |                                                              ~~~~~~~~~~~~~~~~^~~~~~~~~~
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/main.cpp:237:78: error: call to non-static member function without an object argument
  237 |                 ImGui::Options::registerTheme("Cinder Dark", ImGui::Options::cinderDark);
      |                                                              ~~~~~~~~~~~~~~~~^~~~~~~~~~
3 errors generated.
[2/11] Building CXX object CMakeFiles/ImGuiExample.dir/themes.cpp.o
FAILED: CMakeFiles/ImGuiExample.dir/themes.cpp.o 
/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --sysroot=/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DIMGUI_IMPL_OPENGL_ES3 -DImGuiExample_EXPORTS -I/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/../../../../../../.. -I/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/../../../../../../../backends -I/home/user/Sdk/ndk/27.2.12479018/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -std=c++11 -MD -MT CMakeFiles/ImGuiExample.dir/themes.cpp.o -MF CMakeFiles/ImGuiExample.dir/themes.cpp.o.d -o CMakeFiles/ImGuiExample.dir/themes.cpp.o -c /home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.cpp
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.cpp:7:11: error: redefinition of 'Options'
    7 |     class Options {
      |           ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.h:10:11: note: previous definition is here
   10 |     class Options {
      |           ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.cpp:30:23: error: return type of out-of-line definition of 'ImGui::Options::applyTheme' differs from that in the declaration
   30 |     Options& Options::applyTheme(const std::string& themeName) {
      |     ~~~~~~~~          ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.h:22:14: note: previous declaration is here
   22 |         void applyTheme(const std::string& themeName);
      |         ~~~~ ^
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.cpp:41:23: error: out-of-line definition of 'adobeWhite' does not match any declaration in 'ImGui::Options'
   41 |     Options& Options::adobeWhite(Options& options) {
      |                       ^~~~~~~~~~
/home/user/hax/examples/example_android_opengl3/android/app/src/main/cpp/themes.cpp:78:23: error: out-of-line definition of 'cinderDark' does not match any declaration in 'ImGui::Options'
   78 |     Options& Options::cinderDark(Options& options) {
      |                       ^~~~~~~~~~
4 errors generated.
[3/11] Building CXX object CMakeFiles/ImGuiExample.dir/home/user/hax/imgui.cpp.o
ninja: build stopped: subcommand failed.
